--- a/public/lang/en.html
+++ b/public/lang/en.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../assets/css/reset.css?v=1.0" />
     <link rel="stylesheet" href="../assets/css/style.css?v=1.0" />
     <script type="text/javascript" src="words_en.js"></script>
-    <script type="text/javascript" src="msg_en.js"></script>
+    <script type="text/javascript" src="msg_fr.js"></script>
     <script type="text/javascript" src="../assets/tts/speakClient.js"></script>
     <script type="text/javascript" src="../assets/js/jquery.js"></script>
     <script type="text/javascript" src="../assets/js/socket.io.js"></script>
