--- a/public/index.html
+++ b/public/index.html
@@ -12,17 +12,29 @@
     <div class="main">
       <div class="container">
         <br /><br />
-        <div class="text-center text-bold">Tiktok Printer</div>
+        <div class="text-center text-bold">Tiktok LIVE Printer Game</div>
         <br /><br />
-        <a href="lang/en.html" class="d-block mb-3 text-center text-bold"
-          >💬 English (en_us)</a
-        >
-        <a href="lang/fr.html" class="d-block mb-3 text-center text-bold"
-          >💬 Français (fr_fr)</a
-        >
-        <a href="lang/in.html" class="d-block mb-3 text-center text-bold"
-          >💬 Bahasa Indonesia (in_id)</a
-        >
+
+        <div class="text-center">
+          <p>Choose your language</p>
+          <br />
+          <a href="lang/en.html" class="d-block mb-3 text-center text-bold"
+            >💬 English</a
+          >
+          <a href="lang/fr.html" class="d-block mb-3 text-center text-bold"
+            >💬 Français</a
+          >
+          <a href="lang/in.html" class="d-block mb-3 text-center text-bold"
+            >💬 Bahasa Indonesia</a
+          >
+        </div>
+        <div class="text-center">
+          <p>How to play ?</p>
+          <br />
+          <a href="tuto.html" class="d-block mb-3 text-center text-bold"
+            >Tutorial</a
+          >
+        </div>
       </div>
     </div>
   </body>
