--- a/public/lang/en.html
+++ b/public/lang/en.html
@@ -93,6 +93,12 @@
           />
           <button id="targetConnect">Connect</button>
         </div>
+        <div class="text-bold">
+          <p>Donate for more like this</p>
+          <div  class="mb-3 mt-2">
+          <a href="https://coindrop.to/yayadev" target="_blank"><img src="https://coindrop.to/embed-button.png" style="border-radius: 10px; height: 57px !important;width: 229px !important;" alt="Coindrop.to me"></img></a>
+          </div>
+        </div>
 
         <div>
           <audio id="sfx1" class="d-block">
